--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
   // 구글 드라이브 이미지 직접 링크를 여기에 붙여넣으세요.
-  const imageURL = "https://drive.google.com/uc?id=12QOtof1ble-TyaOx8ziO1UA2YYmqTfCw";
+  const imageURL = "https://drive.google.com/file/d/12QOtof1ble-TyaOx8ziO1UA2YYmqTfCw/view?usp=sharing";
 
   // A-Frame skybox 엘리먼트를 가져옵니다.
   const skybox = document.getElementById("skybox");
