--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <a-camera></a-camera>
     </a-scene>
 
-<script>
-  // 구글 드라이브 이미지 직접 링크를 여기에 붙여넣으세요.
-  const imageURL = "https://drive.google.com/file/d/12QOtof1ble-TyaOx8ziO1UA2YYmqTfCw/view?usp=sharing";
+    <script>
+      // 구글 드라이브 이미지 직접 링크를 여기에 붙여넣으세요.
+      const imageURL = "https://drive.google.com/uc?id=12QOtof1ble-TyaOx8ziO1UA2YYmqTfCw";
 
-  // A-Frame skybox 엘리먼트를 가져옵니다.
-  const skybox = document.getElementById("skybox");
+      // A-Frame skybox 엘리먼트를 가져옵니다.
+      const skybox = document.getElementById("skybox");
 
-  // skybox 이미지 URL을 설정합니다.
-  skybox.setAttribute("src", imageURL);
-</script>
+      // skybox 이미지 URL을 설정합니다.
+      skybox.setAttribute("src", imageURL);
+    </script>
   </body>
 </html>
