--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="https://drive.google.com/uc?id=12QOtof1ble-TyaOx8ziO1UA2YYmqTfCw"></a-sky>
+      <a-sky src="assets/vr01.jpg"></a-sky>
     </a-scene>
   </body>
 </html>
