--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR Viewer</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <a-scene>
-      <a-sky src="assets/vr01.jpg"></a-sky>
+        <a-sky src="./assets/vr01.jpg"></a-sky>
     </a-scene>
-  </body>
+</body>
 </html>
