--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene>
         <!-- 이미지 프리로드 -->
         <a-assets>
-            <img id="vr-image" src="./assets/vr01.jpg">
+            <img id="vr-image" src="assets/vr01.jpg">
         </a-assets>
 
         <!-- VR 환경 -->
